feat: glass jar block starting to work